--- a/templates/administration/detail.html
+++ b/templates/administration/detail.html
@@ -17,7 +17,7 @@
                             <label>Filialname: </label>
                         </div>
                         <div class="col">
-                            <input type="text" name="name" id="id_name" value='{{ object.name }}'>
+                            <input type="text" class="form-control" name="name" id="id_name" value='{{ object.name }}'>
                         </div>
                     </div>
                 </li>
@@ -28,7 +28,7 @@
                             <label>Strasse: </label>
                         </div>
                         <div class="col">
-                            <input type="text" name="street" id="id_street" value='{{ object.street }}'>
+                            <input type="text" class="form-control" name="street" id="id_street" value='{{ object.street }}'>
                         </div>
                     </div>
                 </li>
@@ -39,7 +39,7 @@
                             <label>Nr.: </label>
                         </div>
                         <div class="col">
-                            <input type="text" name="number" id="id_number" value='{{ object.number }}'>
+                            <input type="text" class="form-control" name="number" id="id_number" value='{{ object.number }}'>
                         </div>
                     </div>
                 </li>
@@ -50,7 +50,7 @@
                             <label>Stadt: </label>
                         </div>
                         <div class="col">
-                            <input type="text" name="city" id="id_city" value='{{ object.city }}'>
+                            <input type="text" class="form-control" name="city" id="id_city" value='{{ object.city }}'>
                         </div>
                     </div>
                 </li>
@@ -61,7 +61,7 @@
                             <label>PLZ: </label>
                         </div>
                         <div class="col">
-                            <input type="text" name="plz" id="id_plz" value='{{ object.plz }}'>
+                            <input type="text" class="form-control" name="plz" id="id_plz" value='{{ object.plz }}'>
                         </div>
                     </div>
                 </li>
@@ -72,7 +72,7 @@
                             <label>Telefon Nr.: </label>
                         </div>
                         <div class="col">
-                            <input type="text" name="telefon_number" id="id_telefon_number" value='{{ object.telefon_number }}'>
+                            <input type="text" class="form-control" name="telefon_number" id="id_telefon_number" value='{{ object.telefon_number }}'>
                         </div>
                     </div>
                 </li>
