cosmetics for the patient merge, import, list, standort list, modality list

--- a/templates/administration/location_list.html
+++ b/templates/administration/location_list.html
@@ -20,7 +20,8 @@
         <div class="row">       
           <div class="col" id="connetion-button-div">
             <button type="button" id="btn-connect" corresponding-location="{{ object.id }}"
-              class="btn btn-outline-primary" name='get-location-status'>
+              class="btn btn-outline-primary" name='get-location-status'
+              title="Gateway verbingung überprüfen">
               Verfügbarkeit prüfen
             <img id="status-icon" corresponding-location="{{ object.id }}" name ='get-location-status-icon'
              src="/static/images/cancel.png" width="35" height="35" style="display: none;"></button>
