--- a/templates/patient/patient_import.html
+++ b/templates/patient/patient_import.html
@@ -43,7 +43,7 @@
               <div class="toast" id="import-toast-{{ instance.id }}" data-autohide="false" 
               role="alert" aria-live="assertive" aria-atomic="true" style="display: none"> 
                 <div class="toast-header">
-                  <div class="col" style="width: 80px;"> 
+                  <div class="col" width="25" height="25"> 
                     <img src="/static/images/cancel.png" class="rounded mr-2">
                   </div>
                   
