auftrag erstellen redirect to aufträge liste

--- a/templates/worklists/worklist_create.html
+++ b/templates/worklists/worklist_create.html
@@ -140,7 +140,7 @@
                 var button_icon = '<img id="status-icon" src="/static/images/check.png" width="25" height="25">';
                 var button_text = "Vorgang erfolgreich";
                 setTimeout(function () {
-                window.location.replace("{%url 'patients'%}"); //will redirect to your blog page (an ex: blog.html)
+                window.location.replace("{%url 'worklistList'%}"); //will redirect to your blog page (an ex: blog.html)
                 }, 2000); 
             }
             $('#submit-btn').addClass('enabled');
