--- a/templates/patient/patient_import.html
+++ b/templates/patient/patient_import.html
@@ -43,8 +43,8 @@
               <div class="toast" id="import-toast-{{ instance.id }}" data-autohide="false" 
               role="alert" aria-live="assertive" aria-atomic="true" style="display: none"> 
                 <div class="toast-header">
-                  <div class="col" width="25" height="25"> 
-                    <img src="/static/images/cancel.png" class="rounded mr-2">
+                  <div class="col" > 
+                    <img src="/static/images/cancel.png" class="rounded mr-2" width="25" height="25">
                   </div>
                   
                   <strong class="mr-auto">Fehler</strong>
